# osm-routing-bgl

./: .gitignore  CMakeLists.txt  README.md  osm-routing-bgl.cpp
cmake/Modules/: FindOsmium.cmake
include/: GraphBuilder.h  NearestNode.h  NodeCounter.h  RoutePlanner.h
server/: routing_server.py
src/: CMakeLists.txt  GraphBuilder.cpp  NearestNode.cpp  NodeCounter.cpp  RoutePlanner.cpp  main.cpp
