CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(petra)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

set(CMAKE_BUILD_TYPE MinSizeRel)
INCLUDE(OsmiumOptions)

FIND_PACKAGE(Boost 1.38)
FIND_PACKAGE(Osmium COMPONENTS io)

ADD_EXECUTABLE(${PROJECT_NAME} "osm-routing-bgl.cpp")

SET_TARGET_PROPERTIES(${PROJECT_NAME}
    PROPERTIES RUNTIME_OUTPUT_DIRECTORY
    ${PROJECT_SOURCE_DIR}/dist
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OSMIUM_LIBRARIES})
